minor fix in spacing between button and textbox

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ p{
     font-size: 18px;
     font-weight: 200px;
     margin: 0;
+    padding-bottom: 20px;
 }
 
 button{
